# rhpi

./: .clang-format  .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
share/: Makefile.am  org.onesoftnet.redhat.PackageInstaller.desktop.in
src/: Makefile.am  dark.css  global.css  installer.c  installer.h  installer.ui  light.css  main.c  resource.h  rhpi.gresource.xml  rpm.c  rpm.h
